--- a/css/styles.css
+++ b/css/styles.css
@@ -49,6 +49,7 @@ body {
   letter-spacing: 0.03em;
   font-size: 14px;
 }
+
 /* === Header page === */
 .header {
   padding-top: 24px;
@@ -115,6 +116,8 @@ body {
 }
 .header-mail-link,
 .header-tel-link {
+  display: flex;
+  align-items: center;
   font-style: normal;
   font-weight: 500;
   line-height: 1.14;
@@ -127,6 +130,19 @@ body {
 .header-tel-link:focus {
   color: var(--accent-color);
 }
+.mail-link-icon {
+  width: 16px;
+  height: 12px;
+  margin-right: 10px;
+  fill: currentColor;
+}
+.tel-link-icon {
+  width: 10px;
+  height: 16px;
+  margin-right: 10px;
+  fill: currentColor;
+  background-size: contain;
+}
 
 /* === End header contacts === */
 /* === End header page === */
@@ -137,6 +153,13 @@ body {
   background-color: #2f303a;
   padding-top: 200px;
   padding-bottom: 200px;
+  max-height: 600px;
+  max-width: 1600px;
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url(../images/Img-hero.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .main-title {
@@ -183,10 +206,41 @@ body {
   margin-top: -30px;
   margin-left: -30px;
 }
+
 .benefits-item {
   flex-basis: calc((100% - 120px) / 4);
   margin-top: 30px;
   margin-left: 30px;
+}
+.benefits-item::before {
+  display: block;
+  content: '';
+  height: 120px;
+  background-color: #f5f4fa;
+  border-radius: 4px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.benefits-item.icon-attention::before {
+  background-image: url(../images/antenna.svg);
+  background-size: 65px 70px;
+  margin-bottom: 30px;
+}
+.benefits-item.icon-punctuality::before {
+  background-image: url(../images/clock.svg);
+  background-size: 70px 70px;
+  margin-bottom: 30px;
+}
+.benefits-item.icon-planning::before {
+  background-image: url(../images/diagram.svg);
+  background-size: 70px 54px;
+  margin-bottom: 30px;
+}
+.benefits-item.icon-technologies::before {
+  background-image: url(../images/astronaut.svg);
+  background-size: 70px 70px;
+  margin-bottom: 30px;
 }
 
 .benefits-title {
@@ -250,10 +304,16 @@ body {
   flex-basis: calc((100% - 120px) / 4);
   margin-top: 30px;
   margin-left: 30px;
+  background: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
 }
 .team-item-content {
   padding-top: 30px;
   padding-bottom: 30px;
+  padding-right: 32px;
+  padding-left: 32px;
 }
 .name-title {
   font-style: normal;
@@ -269,14 +329,94 @@ body {
   line-height: 19px;
   color: var(--secondary-color);
   text-align: center;
+  margin-bottom: 16px;
+}
+.social-list {
+  display: flex;
+  justify-content: space-between;
+}
+.social-list-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 44px;
+  height: 44px;
+  background-color: #ffffff;
+  border-radius: 50%;
+}
+.social-list-link:hover,
+.social-list-link:focus {
+  background-color: var(--accent-color);
+}
+.social-list-link:hover .social-list-icon,
+.social-list-link:focus .social-list-icon {
+  fill: #ffffff;
+}
+.social-list-icon {
+  width: 20px;
+  height: 20px;
+  fill: #afb1b8;
 }
 /* === End team === */
 
+/* === Client === */
+.client-title {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+  margin-bottom: 50px;
+}
+.client-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: -30px;
+  margin-left: -30px;
+}
+.client-item {
+  flex-basis: calc((100% - 180px) / 6);
+  margin-top: 30px;
+  margin-left: 30px;
+  background-position: center;
+}
+.client-list-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 170px;
+  height: 92px;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+}
+.client-list-link:hover,
+.client-list-link:focus {
+  border: 1px solid var(--accent-color);
+}
+.client-list-link:hover .client-list-icon,
+.client-list-link:focus .client-list-icon {
+  fill: var(--accent-color);
+}
+
+.client-list-icon {
+  width: 106px;
+  height: 60px;
+  fill: #afb1b8;
+}
+/* === End Client === */
+
 /* === Footer === */
 .footer {
+  display: flex;
   background-color: #2f303a;
-  padding-top: 60px;
-  padding-bottom: 60px;
+}
+.flex-footer {
+  display: flex;
+}
+.footer-list {
+  margin-right: 70px;
+  margin-top: 60px;
+  margin-bottom: 60px;
 }
 /* === Footer logo === */
 .footer-logo-link {
@@ -295,6 +435,9 @@ body {
 /* === End footer logo === */
 
 /* === Address === */
+.address {
+  display: flex;
+}
 .address-item:not(:last-child) {
   margin-bottom: 9px;
 }
@@ -310,6 +453,53 @@ body {
   color: rgba(255, 255, 255, 0.6);
 }
 /* === End address === */
+
+/* === Invitation === */
+.invitation-social {
+  display: inline-block;
+  margin-top: 72px;
+  margin-bottom: 100px;
+}
+.invitation-title {
+  display: inline-block;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
+  margin-bottom: 20px;
+}
+
+.invitation-social-list {
+  display: flex;
+}
+
+.invitation-social-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 44px;
+  height: 44px;
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 50%;
+}
+.invitation-social-item:not(:last-child) {
+  margin-right: 10px;
+}
+.invitation-social-link:hover,
+.invitation-social-link:focus {
+  background-color: var(--accent-color);
+}
+.invitation-social-icon {
+  width: 20px;
+  height: 20px;
+  fill: #ffffff;
+}
+
+/* === End Invitation === */
 /* === End footer === */
 
 /* === Portfolio page === */
@@ -341,6 +531,9 @@ body {
 .button-porfolio:focus {
   color: var(--title-text-color);
   background-color: var(--accent-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
 }
 /*=== End button list ===  */
 
@@ -355,6 +548,11 @@ body {
   flex-basis: calc((100% - 90px) / 3);
   margin-top: 30px;
   margin-left: 30px;
+}
+.projects-item:hover,
+.projects-item:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(131, 84, 84, 0.16);
 }
 .projects-item-content {
   background: #ffffff;
@@ -377,5 +575,6 @@ body {
   line-height: 1.87;
   color: var(--secondary-color);
 }
+
 /* === End projects === */
 /* === End portfolio page === */
