--- a/css/styles.css
+++ b/css/styles.css
@@ -160,6 +160,7 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  margin: 0 auto;
 }
 
 .main-title {
